--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "dependencies": {
     "@atlaskit/avatar-group": "^8.3.1",
     "@binance-chain/bsc-use-wallet": "^0.8.1",
+    "@pancakeswap-libs/uikit": "^0.29.4",
     "@pathofdev/react-tag-input": "^1.0.7",
+    "@portis/web3": "^4.0.5",
     "@reduxjs/toolkit": "^1.6.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@walletconnect/web3-provider": "^1.5.0",
     "body-scroll-lock": "^3.1.5",
     "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
+    "ethers": "^5.4.2",
+    "fortmatic": "^2.2.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -28,7 +33,9 @@
     "react-slick": "^0.28.1",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.0",
-    "use-dark-mode": "^2.3.1"
+    "use-dark-mode": "^2.3.1",
+    "web3": "^1.4.0",
+    "web3modal": "^1.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,5 +61,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "pancakeswap-libs/eslint-config-pancake": "1.0.0"
+  }
 }
