--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@binance-chain/bsc-use-wallet": "^0.8.1",
     "@pancakeswap-libs/uikit": "^0.29.4",
     "@pathofdev/react-tag-input": "^1.0.7",
-    "@portis/web3": "^4.0.5",
     "@reduxjs/toolkit": "^1.6.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -17,7 +16,6 @@
     "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
     "ethers": "^5.4.2",
-    "fortmatic": "^2.2.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -34,8 +32,7 @@
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.0",
     "use-dark-mode": "^2.3.1",
-    "web3": "^1.4.0",
-    "web3modal": "^1.9.3"
+    "web3": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -62,6 +59,5 @@
     ]
   },
   "devDependencies": {
-    "pancakeswap-libs/eslint-config-pancake": "1.0.0"
   }
 }
