--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@atlaskit/avatar-group": "^8.3.1",
     "@binance-chain/bsc-use-wallet": "^0.8.1",
-    "@pancakeswap-libs/uikit": "^0.29.4",
+    "@pancakeswap-libs/uikit": "https://github.com/whitehat0917/PantherUikit/tarball/1.0.0",
     "@pathofdev/react-tag-input": "^1.0.7",
     "@reduxjs/toolkit": "^1.6.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -31,7 +31,6 @@
     "react-slick": "^0.28.1",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.0",
-    "use-dark-mode": "^2.3.1",
     "web3": "^1.4.0"
   },
   "scripts": {
